--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,7 @@
   :root {
     --bg-color: black;
     --white: #fff;
+    --header: rgb(21, 128, 123);
   }
   
   main {
@@ -39,7 +40,7 @@
 
   /* css for nav section */
   .header a {
-    color: #178364;
+    color: var(--header);
     text-decoration: none;
   }
 
@@ -66,13 +67,13 @@
   .header h1 {
     display: flex;
     align-items: center;
-    color: rgb(21, 128, 123);
+    color: var(--header);
     font-size: 3rem; 
     margin-bottom: 10px;
   }
 
   h2 {
-    color: rgb(21, 128, 123);
+    color: var(--header);
     text-align: left;
     font-size: 2rem; 
     padding: 10px;
@@ -90,7 +91,7 @@
     width: 100%;
   }
   
-  /* css for Work Section */
+  /* css for Work section */
   .work-projects {
     width: 100%; 
     margin-bottom: 50px; 
@@ -98,6 +99,17 @@
     display: flex; /* flexbox for the work items */
     flex-wrap: wrap; 
     justify-content:center; 
+  }
+
+  .work-project {
+    box-shadow: 0 0 0 0;
+    transition: all ease-in-out 250ms; /* experiment w this */
+  }
+
+  .work-project:hover {
+    box-shadow: 0 0 10px 5px green;
+    border-radius: 8px;
+
   }
 
   .work-project img {
@@ -111,9 +123,16 @@
     text-align: center;
   }
   
-
+  /* css for Contact me section */
+  .contact ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding: 0;
+  }
 
   
+
   /* my media queries */
   @media screen and (min-width: 768px) {
     main {
