--- a/assets/style.css
+++ b/assets/style.css
@@ -1,20 +1,21 @@
   :root {
-    --bg-color: black;
+    --bg-color: rgb(63, 60, 60);
     --white: #fff;
     --header: rgb(21, 128, 123);
+    --project: rgb(5, 94, 5);
   }
   
   main {
     padding: 20px;
   }
 
-  .aboutme, .work, .contact, .resume {
+  .aboutme, .work, .contact {
     margin-bottom: 50px;
   }
 
   body {
     font-size: 17.5px;
-    background-color: rgb(37, 37, 37);
+    background-color: var(--white);
     line-height: 1.1;
   }
 
@@ -60,26 +61,35 @@
   .header nav ul li {
     display: inline-block;
     font-size: 1.5rem;
-    margin-right: 10px;
+    margin-right: 25px;
   }
 
-  /* css for h1 and h2 */
+  /* css for h1 and h2 and h3 */
   .header h1 {
     display: flex;
     align-items: center;
     color: var(--header);
-    font-size: 3rem; 
+    font-size: 4rem; 
+    margin-left: 10px;
     margin-bottom: 10px;
   }
 
   h2 {
     color: var(--header);
     text-align: left;
-    font-size: 2rem; 
+    font-size: 3rem; 
     padding: 10px;
-    margin-bottom: 10px;
+    margin: 10px 10px;
   }
   
+  h3 {
+    color: var(--bg-color);
+    text-transform: capitalize;
+    text-align: center;
+    font-size: 2rem;
+    padding: 10px;
+  }
+
   /* css for footer */ 
   footer {
     background-color: var(--bg-color);
@@ -90,37 +100,41 @@
     bottom: 0;
     width: 100%;
   }
-  
-  /* css for Work section */
-  .work-projects {
-    width: 100%; 
-    margin-bottom: 50px; 
 
-    display: flex; /* flexbox for the work items */
-    flex-wrap: wrap; 
-    justify-content:center; 
+  /* css for about me section */
+  .aboutme p {
+    margin-bottom: 15px;
   }
 
+  /* css for Work section */
+  .work-projects {      /* this is the container for the project items */
+    width: 100%; 
+    margin-bottom: 50px; 
+    /* flexbox for the work items */
+    display: flex;         
+    flex-wrap: wrap; 
+    justify-content: center;
+  }
+
+  .work-project a {
+    text-decoration: none; 
+  }
+
+  /* css for work projects - reference mini project 2 */
   .work-project {
     box-shadow: 0 0 0 0;
-    transition: all ease-in-out 250ms; /* experiment w this */
+    border-radius: 8px;
+    transition: all 0.25s ease-in-out; /* experiment with this */
+    outline: 2px solid var(--project);
+    /* styling the items to fixed sizes */ 
+    padding: 50px;
+    margin: 10px; 
+    background-color: lightblue;
   }
 
   .work-project:hover {
-    box-shadow: 0 0 10px 5px green;
-    border-radius: 8px;
-
-  }
-
-  .work-project img {
-    width: 100%;
-    height: auto;
-    border-radius: 8px;
-  }
-
-  .work-project p {
-    margin-top: 10px;
-    text-align: center;
+    box-shadow: 0 0 10px 10px grey;
+    border-radius: 8px;               
   }
   
   /* css for Contact me section */
@@ -129,19 +143,29 @@
     flex-direction: row;
     justify-content: space-evenly;
     padding: 0;
+    font-size: larger;
   }
 
-  
+  .contact a {
+    text-decoration: none;  
+    color: var(--bg-color);
+  }
 
   /* my media queries */
+  @media screen and (max-width: 768px) {
+    .work-projects {
+      flex-direction: column;
+    }
+  }
+
   @media screen and (min-width: 768px) {
     main {
       padding: 20px;
     }
-  
+
     .work-project {
       width: 50%;
-      margin: 1%; 
+      margin-bottom: 1%; 
     }
   }
   
