updated README file to include Project 1, updated html code to link to Project 1 and its styling was updated in the css code

--- a/assets/style.css
+++ b/assets/style.css
@@ -140,6 +140,11 @@
     width: 100%;
     flex-grow: 1; /* makes this item larger than the others */
   }
+
+  .project-challenge {
+    width: 100%;
+    flex-grow: 1; /* makes this item larger than the others */
+  }
   
   /* css for Contact me section */
   .contact ul {
